styles/styles.scss
/******************************************************/
/*************  CSS Reset  ****************************/
/******************************************************/

/* CSS Reset inspired by https://github.com/TedGoas/Cerberus (licensed under the MIT license) */

/* Remove all spaces around the email design added by some email clients */
html,
body {
  margin: 0 auto !important;
  padding: 0 !important;
  height: 100% !important;
  width: 100% !important;
}

/* Stop email clients from resizing small text */
* {
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
}

/* forces Samsung Android mail clients to use the entire viewport */
#MessageViewBody, #MessageWebViewDiv{
  width: 100% !important;
}

/* Stop Outlook from adding extra spacing to tables */
table,
td {
  mso-table-lspace: 0pt !important;
  mso-table-rspace: 0pt !important;
}

div {
  padding: 0;
  margin: 0;
}

.nps-survey-table td {
  height: 30px; 
  width: 30px;
}

/* Use a better rendering method when resizing images in IE */
img {
  -ms-interpolation-mode:bicubic;
}

/* Prevent Mail clients from underlining links. The same style must be inlined as well */
a {
  text-decoration: none;
  color: bsiProperty('linkColor', #ff7d00);
}

/* Set word-break on table contents to regain the ability to break instead of overflowing */

table.table tr td {
  word-break: break-word;
}

/******************************************************/
/*************  CX Placeholder Links  *****************/
/******************************************************/

// Color of CX placeholder links (e.g. [Unsubscribe from newsletter|unsubscribe])
// Only available as of CX 23.2: The CSS class "placeholder-link" will be rendered onto the <a> element by CX

.bsi-layout-base a.placeholder-link {
  color: bsiProperty('placeholderLinkColorLayoutBase', #16616d) !important;
}
.bsi-layout-colored a.placeholder-link {
  color: bsiProperty('placeholderLinkColorLayoutColored', #ff7d00) !important;
}
.bsi-footer-bg-dark a.placeholder-link {
  color: bsiProperty('placeholderLinkColorFooterDark', #ffffff) !important;
}
.bsi-footer-bg-light a.placeholder-link {
  color: bsiProperty('placeholderLinkColorFooterLight', #383e42) !important;
}

/******************************************************/
/*************  Mobile View  **************************/
/******************************************************/

@media screen and (max-width: 673px) {
  .nps-survey-table td {
    height: 20px; 
    width: 20px;
  }
  .bsi-col-one .bsi-image {
    width: 100% !important;
  }
  .bsi-col-two .bsi-image {
    width: 100% !important;
  }
  .bsi-col-three .bsi-image {
    width: 100% !important;
  }
  .bsi-header-img img {
    width: 100% !important;
    height: auto !important;
  }
  .bsi-footer,
  .bsi-bg-color-footer {
    width: 100% !important;
  }
  .bsi-col-footer {
    text-align: center !important;
    width: 100% !important;
  }
  .bsi-col-footer p {
    text-align: center !important;
  }
  .bsi-col-footer-left .bsi-social-media {
    margin: auto !important;
  }
  .bsi-event-padding {
    padding: 20px 15px !important;
  }
  .bsi-event-text {
    font-size: 14px !important;
    line-height: 26px !important;
  }
  .bsi-event-text a {
    color: inherit;
    text-decoration: none;
  }
  .bsi-event-spacer {
    width: 15px !important;
  }
}
@media screen and (max-width: 460px) {
  
  .nps-survey-table td {
    height: 20px; 
    width: 20px;
  }

  .bsi-col-two .bsi-column {
    max-width: 100% !important;
    padding: 0 !important;
  }
  .bsi-col-three .bsi-column {
    max-width: 100% !important;
  }
  .bsi-col-two .bsi-column.bsi-col-wide.bsi-pbottom {
    padding-bottom: 12px !important;
  }
  .bsi-cta-wrapper {
    width: 100% !important;
    min-width: 100% !important;
  }
  .bsi-cta {
    display: block !important;
  }
  .bsi-smiley-rating {
    width: 300px !important;
  }
}
@media screen and (min-width: 461px) and (max-width: 673px)  {
  .nps-survey-table td {
    height: 20px; 
    width: 20px;
  }

  .bsi-col-three .bsi-column {
    max-width: 33.3% !important;
  }
  .bsi-col-two .bsi-column {
    max-width: 50% !important;
  }
  .bsi-col-two .bsi-column.bsi-col-slim {
    max-width: 33.3% !important;
  }
  .bsi-col-two .bsi-column.bsi-col-wide {
    max-width: 66.6% !important;
  }
  .bsi-col-one .bsi-column {
    max-width: 100% !important;
  }
}

/******************************************************/
/*************  Dark Mode  ****************************/
/******************************************************/
:root {
  color-scheme: light dark;
  supported-color-schemes: light dark;
}

  @media screen and (prefers-color-scheme: dark) {
    .bsi-dm-bg-color {
    background-color: bsiProperty('darkModeBaseBackgroundColor', #000000) !important;
  }
  .bsi-dm-text-color {
    color: bsiProperty('darkModeBaseTextColor', #ffffff) !important;
  }
  .bsi-dm-bg-color-footer {
    background-color: bsiProperty('footerDarkBackgroundColor', #383e42) !important;
  }
  .bsi-dm-highlighted-content {
    background-color: bsiProperty('highlightBackgroundColorDarkMode', #7c3d01) !important;
  }
  .bsi-dm-layout-colored {
    background-color: bsiProperty('layoutColoredBackgroundColorDarkMode', #3b3b3b) !important;
  }

  .nps-dm-button{
    background-color: bsiProperty('highlightBackgroundColorDarkMode', #7c3d01) !important;
  }

  .nps-dm-content {
    background-color: bsiProperty('layoutColoredBackgroundColorDarkMode', #3b3b3b) !important;
  }

}

p {
  margin: 0 !important;
}


/******************************************************/
/***********  BSI Content Editor Override  ************/
/******************************************************/

// this CSS will only be applied in the Edit mode in CX
.bsi-ce-edit-mode {
  // ensures that the editor is aware of the hidden preheader text
  .show-preheader-if-edit { 
    display: block!important;
    margin-bottom: 20px!important;
    color: purple!important;
    font-style: italic!important;
  }

  // ensures that the borders added by the cx content editor do not destroy the layout in edit mode
  
  .bsi-ce-box-sizing-fix {
    box-sizing: border-box!important;
  }
}

